fix font size on mobile for vff page

--- a/public_html/html/corporate/css/style.less
+++ b/public_html/html/corporate/css/style.less
@@ -2279,12 +2279,6 @@ nav.navigation {
 }
 
 #vff{
-    .vff-title{
-        font-size: @title-font-size;
-    }
-    .vff-sub{
-        font-size: @sub-title-font-size;
-    }
     .img-vff{
         width: 30%;
     }
@@ -2356,6 +2350,22 @@ nav.navigation {
             }    
         }
     }
+    #vff{
+        .vff-title{
+            font-size: @sp-sub-title-font-size;
+        }
+        .vff-sub{
+            font-size: @sp-sub-sub-title-font-size;
+        }   
+        .vff-content{
+            h2{
+                font-size: @sp-sub-sub-title-font-size;
+            }
+            h3{
+                font-size: @sp-sub-sub-title-font-size;
+            }
+        }
+    }
 }
 @media (min-width: 768px){
     #bpo-profile{
@@ -2380,7 +2390,23 @@ nav.navigation {
                 font-size: 30px;
             }
         }           
-    }    
+    }   
+    #vff{
+        .vff-title{
+            font-size: @title-font-size;
+        }
+        .vff-sub{
+            font-size: @sub-title-font-size;
+        }   
+        .vff-content{
+            h2{
+                font-size: @title-font-size;
+            }
+            h3{
+                font-size:@sub-sub-title-font-size;
+            }
+        }         
+    }     
 }
 @import "define-style.less";
 @import "service-page.less";
